dev/minio/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: minio
  labels:
    app: minio
spec:
  serviceName: minio
  replicas: 4
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server   # who are our servers in cluster (below)
        - http://minio-0.minio.minio-demo.svc.cluster.local/data
        - http://minio-1.minio.minio-demo.svc.cluster.local/data
        - http://minio-2.minio.minio-demo.svc.cluster.local/data
        - http://minio-3.minio.minio-demo.svc.cluster.local/data
        - --console-address   # which port for console
        - :9001
        ports:
        - containerPort: 9000
          hostPort: 9000
        - containerPort: 9001
          hostPort: 9001          
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: minio-local-storage
      resources:
        requests:
          storage: 140Gi
