dev/minio/service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-node
  labels:
    app: minio
spec:
  # minio console doesn't support path prefixes! An Ingress doesn't work...
  type: NodePort
  ports:
  - name: console
    port: 9001
    targetPort: 9001
    protocol: TCP
    nodePort: 31110
  - name: api
    port: 9000
    targetPort: 9000
    protocol: TCP
    nodePort: 31111
  selector:
    app: minio
