dev/minio/serviceConsole.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  labels:
    app: minio
spec:
  type: NodePort
  ports:
  - name: console
    port: 9001
    targetPort: 9001
    protocol: TCP
    nodePort: 31100
  selector:
    app: minio
